k8s/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-default
spec:
  rules:
  - host: nginx.netty.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
